<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lugar"
    tools:context=".Activities.InicioSession">

    <RelativeLayout
        android:background="@drawable/fondologin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarlogin"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />
        <LinearLayout
            android:layout_marginTop="?attr/actionBarSize"
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo" />

            <EditText
                android:layout_marginTop="30dp"
                android:id="@+id/textcorreo"
                android:textColor="@android:color/white"
                android:shadowColor="@android:color/white"
                android:textColorHighlight="@android:color/white"
                android:textColorHint="@android:color/white"
                android:hint="@string/correo_electronico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="" />

            <EditText
                android:layout_marginTop="30dp"
                android:id="@+id/txtcontra"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:shadowColor="@android:color/white"
                android:textColorHighlight="@android:color/white"
                android:textColorHint="@android:color/white"
                android:hint="@string/contrase_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_marginTop="30dp"
                android:textColor="@android:color/white"
                android:text="@string/entrar"
                android:id="@+id/btnentrar"
                android:background="#009688"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:textAlignment="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginTop="30dp"
                    android:text="@string/no_tienes_una_cuenta"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registrate"
                    android:textStyle="bold"
                    android:paddingStart="10dp"
                    android:textColor="@android:color/white"
                    android:id="@+id/txtregistrate"
                    android:layout_centerInParent="true"
                    android:linksClickable="true"></TextView>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>